[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chandelier"
version = "0.1.0"
description = "Generate chandelier motion points from an hourly schedule."
requires-python = ">=3.9"
dependencies = ["matplotlib>=3.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
